--- a/src/index.css
+++ b/src/index.css
@@ -175,3 +175,23 @@ header a {
 .total button {
   flex: 1;
 }
+
+/* checkout form */
+form {
+  width: 100%;
+}
+.form-container {
+  padding: 0;
+  widows: 100%;
+  list-style-type: none;
+}
+.form-container li {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+}
+input {
+  padding: 1rem;
+  border: 0.1rem #c0c0c0 solid;
+  outline: none;
+}
